--- a/Agenda/Agenda.csproj
+++ b/Agenda/Agenda.csproj
@@ -147,6 +147,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ContactosController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -191,6 +192,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\contactos\Create.cshtml" />
+    <Content Include="Views\contactos\Delete.cshtml" />
+    <Content Include="Views\contactos\Details.cshtml" />
+    <Content Include="Views\contactos\Edit.cshtml" />
+    <Content Include="Views\contactos\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
