--- a/Agenda/Agenda.csproj
+++ b/Agenda/Agenda.csproj
@@ -167,6 +167,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Img\bg.jpeg" />
+    <Content Include="Content\Img\bg1.jpg" />
+    <Content Include="Content\Img\bg2.jpg" />
+    <Content Include="Content\Img\bg3.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -206,6 +210,7 @@
     <Content Include="Views\contactos\Details.cshtml" />
     <Content Include="Views\contactos\Edit.cshtml" />
     <Content Include="Views\contactos\Index.cshtml" />
+    <Content Include="Views\contactos\acerca.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
