--- a/Agenda/Agenda.csproj
+++ b/Agenda/Agenda.csproj
@@ -161,6 +161,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704202128187_InitialCreate.cs" />
+    <Compile Include="Migrations\201704202128187_InitialCreate.Designer.cs">
+      <DependentUpon>201704202128187_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704211400298_telefono.cs" />
+    <Compile Include="Migrations\201704211400298_telefono.Designer.cs">
+      <DependentUpon>201704211400298_telefono.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\atributos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -229,6 +238,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201704202128187_InitialCreate.resx">
+      <DependentUpon>201704202128187_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704211400298_telefono.resx">
+      <DependentUpon>201704211400298_telefono.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
